--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,38 +1,21 @@
 ---
 name: 报告错误
 about: 报告一个错误
-title: 在错误信息里面请不要出现qq QQ qq音乐字样,请以coco代替
+title: 在错误信息里面请不要出现qq QQ qq音乐字样,请以coco代替.
 labels: bug
 assignees: fengT-T
 
 ---
 
-**Describe the bug**
-A clear and concise description of what the bug is.
+**bug详情描述**
+bug详情描述内容
 
-**To Reproduce**
-Steps to reproduce the behavior:
-1. Go to '...'
-2. Click on '....'
-3. Scroll down to '....'
-4. See error
+**如何重现bug呢**
+步骤
 
-**Expected behavior**
-A clear and concise description of what you expected to happen.
+**截图**
+如果有截图就更好了
 
-**Screenshots**
-If applicable, add screenshots to help explain your problem.
-
-**Desktop (please complete the following information):**
- - OS: [e.g. iOS]
- - Browser [e.g. chrome, safari]
- - Version [e.g. 22]
-
-**Smartphone (please complete the following information):**
- - Device: [e.g. iPhone6]
- - OS: [e.g. iOS8.1]
- - Browser [e.g. stock browser, safari]
- - Version [e.g. 22]
-
-**Additional context**
-Add any other context about the problem here.
+**桌面信息:**
+ - 操作系统: [e.g. deepin or manjaro kde or Ubuntu]
+ - 版本号 [e.g. 2.0.4]
