Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,7 +1,7 @@
 ---
 name: 报告错误
 about: 报告一个错误
-title: 在错误信息里面请不要出现qq QQ qq音乐字样,请以coco代替.
+title: '错误标题 (tip: 在错误信息里面请不要出现qq QQ qq音乐字样,请以coco代替.)'
 labels: bug
 assignees: fengT-T
 
